kubernetes/dashboard.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-dashboard-nodeport
  namespace: kube-system
spec:
  type: NodePort
  selector:
    k8s-app: kubernetes-dashboard
  ports:
  - protocol: TCP
    targetPort: 8443
    nodePort: 30443
    port: 443
