kubernetes/datadog-agent.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: datadog-agent
spec:
  selector:
    matchLabels:
      name: datadog-agent
  template:
    metadata:
      name: datadog-agent
      labels:
        name: datadog-agent
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      serviceAccountName: datadog-agent
      containers:
      - name: datadog-agent
        image: datadog/agent:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "512Mi"
            cpu: "256m"
        securityContext:
          capabilities:
            add: ["SYS_ADMIN", "SYS_RESOURCE", "SYS_PTRACE", "NET_ADMIN"]
        ports:
          - containerPort: 8125
            hostPort: 8125
            name: dogstatsdport
            protocol: UDP
          - containerPort: 8126
            hostPort: 8126
            name: traceport
            protocol: TCP
        volumeMounts:
          - name: dockersocket
            mountPath: /var/run/docker.sock
          - name: logpodpath
            mountPath: /var/log/pods
          - name: logcontainerpath
            mountPath: /var/lib/docker/containers
          - name: procdir
            mountPath: /host/proc
            readOnly: true
          - name: cgroups
            mountPath: /host/sys/fs/cgroup
            readOnly: true
          - name: pointerdir
            mountPath: /opt/datadog-agent/run
          - name: debugfs
            mountPath: /sys/kernel/debug
          - name: dd-confd
            mountPath: /conf.d
          - mountPath: /etc/kubernetes/pki/etcd
            name: etcd-certs
          - mountPath: /etc/datadog-agent/conf.d/etcd.d
            name: empty-dir
        livenessProbe:
          exec:
            command:
              - ./probe.sh
          initialDelaySeconds: 15
          periodSeconds: 5
      tolerations:
        - key: node-role.kubernetes.io/master
          operator: "Exists"
          effect: NoSchedule
      volumes:
        - name: dockersocket
          hostPath:
            path: /var/run/docker.sock
        - hostPath:
            path: /var/log/pods
          name: logpodpath
        - hostPath:
            path: /var/lib/docker/containers
          name: logcontainerpath
        - name: procdir
          hostPath:
            path: /proc
        - name: cgroups
          hostPath:
            path: /sys/fs/cgroup
        - name: pointerdir
          hostPath:
            path: /opt/datadog-agent/run
        - name: debugfs
          hostPath:
            path: /sys/kernel/debug
        - name: dd-confd
          configMap:
            name: dd-agent-confd
        - name: etcd-certs
          hostPath:
            path: /etc/kubernetes/pki/etcd
            type: DirectoryOrCreate
        - name: empty-dir
          emptyDir: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: datadog-cluster-agent
spec:
  selector:
    matchLabels:
      name: datadog-cluster-agent
  template:
    metadata:
      name: datadog-cluster-agent
      labels:
        name: datadog-cluster-agent
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      serviceAccountName: dca
      containers:
        - name: datadog-cluster-agent
          image: datadog/cluster-agent
          imagePullPolicy: Always
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "256Mi"
              cpu: "200m"
          volumeMounts:
            - name: dd-confd
              mountPath: /conf.d
      volumes:
        - name: dd-confd
          configMap:
            name: dd-cluster-agent-confd
---
apiVersion: v1
kind: Service
metadata:
  name: datadog-cluster-agent
  labels:
    name: datadog-cluster-agent
spec:
  ports:
  - port: 5005 # Has to be the same as the one exposed in the DCA. Default is 5005.
    protocol: TCP
  selector:
    name: datadog-cluster-agent
