kubernetes/apm-demo.yaml
apiVersion: v1
kind: Service
metadata:
  name: apm-demo
spec:
  type: NodePort
  sessionAffinity: ClientIP
  ports:
  - name: https
    port: 80
    # nodePort: 30080
    targetPort: 8080
  selector:
    app: apm-demo
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: apm-demo
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - path: /HappyPath
        backend:
          serviceName: apm-demo
          servicePort: 80
