kubernetes/app-node.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-node
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-node
  template:
    metadata:
      name: app-node
      labels:
        app: app-node
    spec:
      containers:
      - name: app-node
        image: yaalexf/app-node
        imagePullPolicy: Always
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"
---
kind: Service
apiVersion: v1
metadata:
  labels:
    app: app-node
  name: app-node
spec:
  ports:
    - port: 8000
      targetPort: 80
  selector:
    app: app-node
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app-node
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  # host: master.k8s.aws.pipsquack.ca
  - http:
      paths:
      - path: /app-node(/|$)(.*)
        backend:
          serviceName: app-node
          servicePort: 8000
