kubernetes/jenkins.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jenkins
spec:
  rules:
  - host: jenkins.k8s.aws.pipsquack.ca
    http:
      paths:
      - backend:
          serviceName: jenkins
          servicePort: 8080
